# arrow-adbc-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
.claude/rules/: no-clippy-allow.md
.github/workflows/: ci.yml
adbc-flightsql/: Cargo.toml
adbc-flightsql/src/: lib.rs
adbc-flightsql/tests/: integration.rs
adbc-mysql/: Cargo.toml
adbc-mysql/src/: catalog.rs  convert.rs  lib.rs
adbc-mysql/tests/: integration.rs
adbc-postgres/: Cargo.toml
adbc-postgres/examples/: inventory.rs
adbc-postgres/src/: catalog.rs  convert.rs  lib.rs
adbc-postgres/tests/: integration.rs
adbc-sqlite/: Cargo.toml
adbc-sqlite/examples/: analytics.rs  etl_pipeline.rs
adbc-sqlite/src/: catalog.rs  convert.rs  lib.rs
adbc-sqlite/tests/: integration.rs
adbc/src/: driver.rs  lib.rs  schema.rs  sql.rs
crates/adbc/: Cargo.toml
crates/adbc-flightsql/: Cargo.toml
crates/adbc-flightsql/src/: catalog.rs  lib.rs
crates/adbc-flightsql/tests/: integration.rs
crates/adbc-mysql/: Cargo.toml
crates/adbc-mysql/src/: catalog.rs  convert.rs  lib.rs
crates/adbc-mysql/tests/: integration.rs
crates/adbc-postgres/: Cargo.toml
crates/adbc-postgres/examples/: inventory.rs
crates/adbc-postgres/src/: catalog.rs  convert.rs  lib.rs
crates/adbc-postgres/tests/: integration.rs
crates/adbc-sqlite/: Cargo.toml
crates/adbc-sqlite/examples/: analytics.rs  etl_pipeline.rs
crates/adbc-sqlite/src/: catalog.rs  convert.rs  lib.rs
crates/adbc-sqlite/tests/: integration.rs
crates/adbc/src/: driver.rs  dyn_api.rs  error.rs  helpers.rs  lib.rs  sql.rs
docs/: architecture.md  design-async.md  development.md  feature-matrix.md  overview.md  postmortem-sqlite-bound-params.md  publish-checklist.md
docs/adbc-mysql/: integration-tests.md
docs/adbc-postgres/: integration-tests.md
docs/adbc-sqlite/: integration-tests.md
