[workspace]
members = ["adbc", "adbc-flightsql", "adbc-sqlite", "adbc-postgres", "adbc-mysql"]
resolver = "2"

[workspace.package]
authors = ["Arrow ADBC contributors"]
categories = ["database", "api-bindings", "data-structures"]
edition = "2021"
homepage = "https://github.com/Shuozeli/arrow-adbc-rs"
keywords = ["adbc", "arrow", "database", "sql", "analytics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shuozeli/arrow-adbc-rs"
rust-version = "1.81"
version = "0.1.0"

[workspace.dependencies]
adbc = { path = "./adbc", version = "0.1.0" }
adbc-flightsql = { path = "./adbc-flightsql", version = "0.1.0" }
adbc-sqlite = { path = "./adbc-sqlite", version = "0.1.0" }
adbc-postgres = { path = "./adbc-postgres", version = "0.1.0" }
adbc-mysql = { path = "./adbc-mysql", version = "0.1.0" }
arrow-array = { version = ">=53, <59", default-features = false }
arrow-buffer = { version = "58", default-features = false }
arrow-flight = { version = ">=53, <59", features = ["flight-sql", "tls"] }
arrow-schema = { version = ">=53, <59", default-features = false }
arrow-select = { version = ">=53, <59", default-features = false }
bytes = { version = "1" }
mysql = { version = "25" }
postgres = { version = "0.19" }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1" }
tonic = { version = "0.12" }
