[package]
description = "ADBC driver for Apache Arrow FlightSQL"
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
name = "adbc-flightsql"
rust-version.workspace = true
version.workspace = true

[dependencies]
adbc.workspace = true
arrow-array.workspace = true
arrow-flight.workspace = true
arrow-schema.workspace = true
bytes.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
# Integration tests require a live FlightSQL server — marked #[ignore] by default.
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
tokio = { workspace = true }
