[package]
description = "Pure-Rust MySQL ADBC driver"
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
name = "adbc-mysql"
rust-version.workspace = true
version.workspace = true

[dependencies]
adbc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
mysql.workspace = true

[dev-dependencies]
arrow-select.workspace = true
