[package]
description = "Pure-Rust PostgreSQL ADBC driver"
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
name = "adbc-postgres"
rust-version.workspace = true
version.workspace = true

[features]
default = []
tls = ["dep:tokio-postgres-rustls", "dep:rustls", "dep:rustls-native-certs"]

[dependencies]
adbc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
bytes.workspace = true
futures-util.workspace = true
rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
tokio.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls = { workspace = true, optional = true }

[dev-dependencies]
arrow-select.workspace = true
tokio = { workspace = true }
