[package]
description = "Pure-Rust SQLite ADBC driver (no system C library required)"
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
name = "adbc-sqlite"
rust-version.workspace = true
version.workspace = true

[dependencies]
adbc.workspace = true
arrow-array.workspace = true
arrow-buffer = { version = ">=53, <59" }
arrow-schema.workspace = true
arrow-select.workspace = true
rusqlite.workspace = true
tokio.workspace = true

[dev-dependencies]
arrow-select.workspace = true
tokio = { workspace = true }
