[package]
description = "Clean-room ADBC core traits and types"
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
name = "adbc"
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
